# cloudfuse-gui

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  SECURITY.md  build_packages.sh  cloudfuse.desktop  cloudfuse_gui.spec  compile_ui.sh  create_gui.sh  public.key  pyinstaller.spec  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql-analysis.yml  codespell.yml  publish-release.yml  scorecard.yml  trivy.yaml  zizmor.yml
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages  (+1 more)
packaging/deb/: control  copyright
packaging/rpm/: cloudfuse-gui.spec
rpm-repo/: cloudfuse-gui-0.1.0_amd64.rpm
rpm-repo/repodata/: 0db3d7499b1a52ac64f017c29e1a51ef76101db8c7cf1927ad4a14b02b66c7ca-other.sqlite.bz2  29f5fbac35052fcc4840b946fe449904cee49a9f25c5f70e48c68c008edbbdc9-filelists.sqlite.bz2  2f06d59be4c8a8ca090cde03e2473017748f685b4f75a34038a67b6062582f86-primary.sqlite.bz2  38f0d2bde914c28d19c1fdb030d270b098660d997866396cd984b8b10f43057a-primary.sqlite.bz2  6b0de0e582f96f4deda3383cb2d0213d9ffa3f528ea341112f1708438af4ac05-filelists.sqlite.bz2  repomd.xml  repomd.xml.asc  (+4 more)
src/: azure_config_advanced_ui.py  azure_config_common_ui.py  common_qt_functions.py  fuseGUI.spec  fuseGUI_test.py  mainwindow_redo.py  mainwindow_redo.ui  minimum_settings_page.ui  mountPrimaryWindow.py  mountPrimaryWindow.ui  mountPrimaryWindow_ui.py  pysidedeploy.spec  s3_config_advanced_ui.py  s3_config_common_ui.py  tableTest.py
windows/: windows_installer_build.iss
